Support Java 9